tests/ui/serde/serde.stderr
error: Found conflicting `#[serde(bound ...)]`
 --> tests/ui/serde/serde.rs:6:9
  |
6 | #[serde(bound = "")]
  |         ^^^^^^^^^^
